began fixing header alignment

--- a/dev/styles/main.scss
+++ b/dev/styles/main.scss
@@ -143,7 +143,8 @@ ol ul {
 }
 
 .logo {
-	max-height:35px;
+	// max-height:35px;
+	max-height:45px;
 	max-width:150px;
 	float:left;
 	position: absolute;
@@ -198,6 +199,7 @@ ul.nav {
 	position: absolute;
 	top:2%;
 	right:2%;
+	width:1080px;
 }
 
 header {
@@ -226,7 +228,6 @@ div.wrapper {
 	width:1080px;
 	margin:0 auto;
 	text-align:left;
-	display:inline-block;
 }
 
 //
@@ -460,7 +461,7 @@ img.fb {
 }
 
 header, body, .footer-container{
-max-width: 1080px;
+// max-width: 1080px;
 margin: 0 auto;
 }
 
